--- a/Automated_segmentation/mitochondria_segmentation.ipynb
+++ b/Automated_segmentation/mitochondria_segmentation.ipynb
@@ -554,8 +554,8 @@
     "    else:\n",
     "        final_mask = np.bitwise_or(final_mask, masks[i+1][0])\n",
     "    \n",
-    "#with open('mito_uncut_conf_17.npy', 'wb') as f:\n",
-    "#   np.save(f, masks[:,0,:,:])\n",
+    "with open('filename.npy', 'wb') as f:\n",
+    "   np.save(f, masks[:,0,:,:])\n",
     "# visualize the predicted masks\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(image_bgr)\n",
